Fixes layout bugs with page menus in activity edit page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -458,12 +458,13 @@ form.edit_lightweight_activity {
  			padding: 5px 3px;
     }
     li.item {
-      min-height: 12px;
+      min-height: 15px;
     }
     ul {
 			float: right;
       li {
         display: inline;
+        border: none;
       }
     }
   }
@@ -493,6 +494,8 @@ form.edit_lightweight_activity {
   }
   li.drag_handle {
     padding: 5px;
+    cursor: move;
+    padding-top: 0;
   }
 }
 ul#new {
